kubernetes/manifests/apps/media/immich/external-postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: immich-pg-rw-external
  namespace: immich
spec:
  type: LoadBalancer
  selector:
    cnpg.io/cluster: immich-pg
  ports:
    - protocol: TCP
      port: 5432
        targetPort: 5432
