kubernetes/manifests/apps/media/immich/immich-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    meta.helm.sh/release-name: immich
    meta.helm.sh/release-namespace: immich
  labels:
    app.kubernetes.io/instance: immich
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: server
    app.kubernetes.io/service: immich-service
    app.kubernetes.io/version: v1.119.0
    helm.sh/chart: immich-0.8.5
    helm.toolkit.fluxcd.io/name: immich
    helm.toolkit.fluxcd.io/namespace: flux-system
  name: immich-service  # Lowercase service name
  namespace: immich
spec:
  type: ClusterIP  # Explicitly define service type
  internalTrafficPolicy: Cluster
  ipFamilies:
    - IPv4
    - IPv6
  ipFamilyPolicy: PreferDualStack
  ports:
    - name: http
      port: 2283
      protocol: TCP
      targetPort: 2283  # Use the actual container port
    - name: metrics-api
      port: 8081
      protocol: TCP
      targetPort: 8081
    - name: metrics-ms
      port: 8082
      protocol: TCP
      targetPort: 8082
  selector:
    app.kubernetes.io/instance: immich
    app.kubernetes.io/name: server
